--- a/index.html
+++ b/index.html
@@ -288,13 +288,11 @@
             color: #ccc;
         }
 
-        /* gif preview */
         .gif-preview {
-            position: absolute;
+            position: relative;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 80%;
+            width: 80%;
             object-fit: contain;
             display: none;
         }
