--- a/index.html
+++ b/index.html
@@ -601,6 +601,38 @@
         }
 
         function addRectangle() {
+            // check the amount of rectangles, if it's 4 or more, don't add another one
+            const rectangles = document.querySelectorAll('.rounded-rectangle');
+            if (rectangles.length >= 4) {
+                // create a popup that says you can't add more than 4 rectangles
+                const popup = document.createElement('div');
+                popup.className = 'popup';
+                // css for the popup
+                popup.style.position = 'fixed';
+                popup.style.top = '50%';
+                popup.style.left = '50%';
+                popup.style.transform = 'translate(-50%, -50%)';
+                popup.style.padding = '1rem';
+                popup.style.backgroundColor = 'red';
+                popup.style.borderRadius = '0.5rem';
+                popup.style.boxShadow = '0 0 1rem rgba(0, 0, 0, 0.25)';
+                popup.style.zIndex = '1000';
+                // text for the popup, black letters with white border
+                popup.style.color = 'black';
+                popup.style.textAlign = 'center';
+                popup.style.textShadow = '0 0 0.5rem white';
+                popup.style.fontSize = '1.5rem';
+                popup.style.fontWeight = 'bold';
+                popup.style.border = '0.25rem solid black';
+                popup.style.borderRadius = '0.5rem';
+                popup.style.padding = '1rem';
+                popup.textContent = 'You can\'t add more than 4 rectangles';
+                document.body.appendChild(popup);
+                setTimeout(() => {
+                    popup.remove();
+                }, 2000);
+                return;
+            }
             const icons = [
                 'fas fa-chart-line',
                 'fas fa-dollar-sign',
