--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 popup.style.border = '0.25rem solid black';
                 popup.style.borderRadius = '0.5rem';
                 popup.style.padding = '1rem';
-                popup.textContent = 'You can\'t add more than 4 rectangles';
+                popup.textContent = 'You can\'t add more than 4 Counters';
                 document.body.appendChild(popup);
                 setTimeout(() => {
                     popup.remove();
