--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
                         ctx.fillStyle = 'black';
                         const newY = y + 24;
                         // detect if the browser is mobile or web
-                        if (navigator.userAgent.match(/Android/i) || navigator.userAgent.match(/webOS/i) || navigator.userAgent.match(/iPhone/i) || navigator.userAgent.match(/iPad/i) || navigator.userAgent.match(/iPod/i)) {
-                            newY = y - 24;
+                        if (isMobile()) {
+                            newY = newY - 24;
                         }
                         ctx.fillText(symbolBefore + currentNumber + symbolAfter, x, newY);
                     });
@@ -475,6 +475,9 @@
                 }
                 animate();
             });
+        }
+        function isMobile() {
+            return 'ontouchstart' in window || navigator.maxTouchPoints > 0 || navigator.msMaxTouchPoints > 0;
         }
 
         const canvas = document.getElementById('canvas');
