--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
             });
         }
         function isMobile() {
-            return 'ontouchstart' in window || navigator.maxTouchPoints > 0 || navigator.msMaxTouchPoints > 0;
+            return 'ontouchstart' in window;
         }
 
         const canvas = document.getElementById('canvas');
