--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Fancy GIF Counter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href='https://fonts.googleapis.com/css?family=Syne Mono' rel='stylesheet'>
@@ -14,24 +15,11 @@
             align-content: center;
             justify-content: center;
             display: grid;
-            height: 100vh;
-            width: 100vw;
+            height: 100%;
+            width: 100%;
             overflow-y: auto;
             overflow-x: hidden;
-            background: linear-gradient(-45deg, #ee765255, #e73c7e55, #23a6d555, #23d5ab55);
-            background-size: 400% 400%;
-            animation: gradient 250s ease infinite;
-        }
-        @keyframes gradient {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
+            position: fixed;
         }
 
         .gradient-bg {
@@ -360,8 +348,10 @@
 
             const numbers = document.querySelectorAll('.number');
             const cachedPositionsAndDimensions = [];
+
             numbers.forEach((numberElement) => {
                 const numberRect = numberElement.getBoundingClientRect();
+                let adjustedY = numberRect.top + window.scrollY;
                 cachedPositionsAndDimensions.push({
                     x: numberRect.left + window.scrollX,
                     y: numberRect.top + window.scrollY,
